[package]
name = "ptyZZZ"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "ptyZZZ"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
wezterm-term = { git = "https://github.com/wezterm/wezterm", rev = "577474d89ee61aef4a48145cdec82a638d874751" }

[profile.release]
opt-level = 2
